--- a/env.yml
+++ b/env.yml
@@ -65,6 +65,7 @@ dependencies:
     - jupyter-client==6.1.7
     - jupyter-core==4.6.3
     - jupyterlab-pygments==0.1.2
+    - kaggle==1.5.10
     - markupsafe==1.1.1
     - mistune==0.8.4
     - multiprocess==0.70.10
@@ -75,6 +76,7 @@ dependencies:
     - notebook==6.1.4
     - numpy==1.19.2
     - packaging==20.4
+    - pandarallel==1.5.1
     - pandas==1.1.3
     - pandocfilters==1.4.3
     - parso==0.7.1
@@ -97,6 +99,7 @@ dependencies:
     - python-box==3.4.6
     - python-dateutil==2.8.1
     - python-dotenv==0.14.0
+    - python-slugify==4.0.1
     - pytz==2020.1
     - pyzmq==19.0.2
     - regex==2020.10.23
@@ -108,8 +111,10 @@ dependencies:
     - six==1.15.0
     - starlette==0.13.6
     - streamlit==0.64.0
+    - style==1.1.0
     - terminado==0.9.1
     - testpath==0.4.4
+    - text-unidecode==1.3
     - tokenizers==0.9.2
     - toml==0.10.1
     - toolz==0.11.1
@@ -119,6 +124,7 @@ dependencies:
     - traitlets==5.0.5
     - transformers==3.4.0
     - tzlocal==2.1
+    - update==0.0.1
     - urllib3==1.25.11
     - uvicorn==0.11.8
     - uvloop==0.14.0
@@ -129,5 +135,4 @@ dependencies:
     - websockets==8.1
     - widgetsnbextension==3.5.1
     - xxhash==2.0.0
-prefix: /home/andompesta/miniconda3/envs/omnitext
-
+prefix: /home/ando/miniconda3/envs/omnitext
